<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.n0490426.myapplication.EditBills">

    <!-- TODO: Update blank fragment layout -->
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="32dp"
            android:contentDescription="Label for editing bill"
            android:text="@string/editBill_frag_editbill"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/updateBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="update"
            android:contentDescription="Update button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/inputAmount"
            android:layout_width="320dp"
            android:contentDescription="Input amount"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="Amount"
            android:inputType="number|numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputBillName" />

        <EditText
            android:id="@+id/inputDaysBefore"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:contentDescription="Input for days before reminder"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/bills_frag_daysbefore"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputAmount" />

        <EditText
            android:id="@+id/inputDueDate"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/input_for_bill_due_date"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/bills_frag_duedate"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputDaysBefore" />

        <CheckBox
            android:id="@+id/checkBoxSplitEvenly"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/checkbx_for_splitting_bill"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/bills_frag_splitbillevenly"
            app:layout_constraintBottom_toTopOf="@+id/updateBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputReminderTime" />


        <EditText
            android:id="@+id/inputReminderTime"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/input_for_bill_reminder_time"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/set_bill_reminder_time"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputDueDate" />

        <EditText
            android:id="@+id/inputBillName"
            android:contentDescription="@string/input_for_bill_name"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/bills_frag_otherbills"
            android:inputType="textCapWords|textPersonName"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:ignore="ContentDescription" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>
