<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.n0490426.myapplication.AccountActivity">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/Account_page_title"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/radioGroupHouseOrFlat"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="44dp"
                android:layout_marginTop="24dp"
                android:contentDescription="Radio group house or flat"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6">

                <RadioButton
                    android:id="@+id/radioFlat"
                    android:layout_height="match_parent"
                    android:contentDescription="Radio button flat"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorPrimary"
                    android:text="@string/account_frag_flat" />

                <RadioButton
                    android:id="@+id/radioHouse"
                    android:contentDescription="Radio button house"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorPrimary"
                    android:checked="false"
                    android:text="@string/account_frag_house" />
            </RadioGroup>

            <TextView
                android:id="@+id/accountLabel1"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:gravity="center"
                android:text="@string/account_frag_houseFlat"
                android:contentDescription="Label for House or flat"
                app:layout_constraintEnd_toStartOf="@+id/radioGroupHouseOrFlat"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <Button
                android:id="@+id/updateBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:text="@string/update"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputNumberHousemates"
                app:layout_constraintVertical_bias="1.0" />

            <EditText
                android:id="@+id/inputCity"
                android:layout_width="320dp"
                android:contentDescription="Input City text box"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:hint="@string/account_frag_city"
                android:inputType="textCapSentences|textPostalAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroupHouseOrFlat" />

            <Spinner
                android:id="@+id/inputNumberHousemates"
                android:layout_width="101dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                android:contentDescription="Housemates spinner"
                app:layout_constraintTop_toBottomOf="@+id/inputCity" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="label for housemates spinner"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:text="@string/account_frag_nosharers"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputCity" />

        </android.support.constraint.ConstraintLayout>


    </ScrollView>

</FrameLayout>
